istio/Pod_Pod_VService/Doctorvirtualservice_Scenariobased.yaml
# voting-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: doctor-app-vs
spec:
  hosts:
  - "doctorservice.doctor.svc.cluster.local"
  http:
  - match:
    - uri:
        prefix: /
      headers:
         test:
           exact: canary-test
    route:
    - destination:
        host: doctorservice.doctor.svc.cluster.local
        subset: v2
        port:
         number: 8500       
  - match:
    - uri:
        prefix: /

    route:
    - destination:
        host: doctorservice.doctor.svc.cluster.local
        subset: v1
        port:
         number: 8500
